fix: added stylsheet link along with preload to account for mozilla browser

--- a/src/framework/preferences/html/SeparatedPanelPrefsEditorFrame.html
+++ b/src/framework/preferences/html/SeparatedPanelPrefsEditorFrame.html
@@ -4,13 +4,23 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-        <link rel="preload" href="../../../lib/normalize/css/normalize.css" as="style" onload="this.rel='stylesheet'" />
-        <link rel="preload" href="../../../framework/core/css/fluid.css" as="style" onload="this.rel='stylesheet'" />
+        <!-- PRELOADS -->
+        <link rel="preload" href="../../../lib/normalize/css/normalize.css" as="style" />
+        <link rel="preload" href="../../../framework/core/css/fluid.css" as="style" />
 
         <!-- Component styles -->
-        <link rel="preload" href="../css/Enactors.css" as="style" onload="this.rel='stylesheet'"/>
-        <link rel="preload" href="../css/PrefsEditor.css" as="style" onload="this.rel='stylesheet'" />
-        <link rel="preload" href="../css/SeparatedPanelPrefsEditorFrame.css" as="style" onload="this.rel='stylesheet'" />
+        <link rel="preload" href="../css/Enactors.css" as="style" />
+        <link rel="preload" href="../css/PrefsEditor.css" as="style" />
+        <link rel="preload" href="../css/SeparatedPanelPrefsEditorFrame.css" as="style" />
+
+        <!-- STYLESHEETS -->
+        <link rel="stylesheet" type="text/css" href="../../../lib/normalize/css/normalize.css" />
+        <link rel="stylesheet" type="text/css" href="../../../framework/core/css/fluid.css" />
+
+        <!-- Component styles -->
+        <link rel="stylesheet" type="text/css" href="../css/Enactors.css" />
+        <link rel="stylesheet" type="text/css" href="../css/PrefsEditor.css" />
+        <link rel="stylesheet" type="text/css" href="../css/SeparatedPanelPrefsEditorFrame.css" />
 
         <title>Preferences Editor</title>
      </head>
