--- a/src/framework/preferences/html/SeparatedPanelPrefsEditorFrame.html
+++ b/src/framework/preferences/html/SeparatedPanelPrefsEditorFrame.html
@@ -4,6 +4,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+        <!-- Preload Stylesheets to improve performance -->
+        <link rel="preload" href="../../../lib/normalize/css/normalize.css" as="style" />
+        <link rel="preload" href="../../../framework/core/css/fluid.css" as="style" />
+        <link rel="preload" href="../css/Enactors.css" as="style" />
+        <link rel="preload" href="../css/PrefsEditor.css" as="style" />
+        <link rel="preload" href="../css/SeparatedPanelPrefsEditorFrame.css" as="style" />
+
         <link rel="stylesheet" type="text/css" href="../../../lib/normalize/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="../../../framework/core/css/fluid.css" />
 
